--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,6 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    {% block js %}{% end %}
-
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="static/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/ico/apple-touch-icon-114-precomposed.png">
@@ -92,7 +90,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery.js"></script>
-    {% block include_js %}{%end%}
+    <script src="/static/js/bootstrap.min.js"></script>
+    {% block js %}{%end%}
 
   </body>
 </html>
