[update] using dynamic rest handlers. second_password renamed to internal_password. other improvements.

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -33,7 +33,7 @@
         <h2 class="form-signin-heading">Sign up</h2>
         <input type="text" class="input-block-level" placeholder="Email address" name="email">
         <input type="password" class="input-block-level" placeholder="Password" name="password">
-        <input type="password" class="input-block-level" placeholder="Internal Password (may be easier)" name="second_password">
+        <input type="password" class="input-block-level" placeholder="Internal Password (may be easier)" name="internal_password">
         <button class="btn btn-large btn-primary" type="submit">Create account</button>
 
       </form>
