[update] better list template

--- a/templates/tornado_crud/list.html
+++ b/templates/tornado_crud/list.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+<h1>List</h1>
+
 <table id="table_objs" class="table table-condensed table-hover">
     <thead>
         <tr>
@@ -22,6 +24,13 @@
             <td>Row 2 Data 2</td>
             <td>etc</td>
         </tr>
+<!--         {% for obj in objs %}
+        <tr>
+            <td>{{ obj. }}</td>
+            <td>{{ obj. }}</td>
+            <td>{{ obj. }}</td>
+        </tr>
+        {% end %} -->
     </tbody>
 </table>
 
