--- a/templates/accounts/user_page.html
+++ b/templates/accounts/user_page.html
@@ -24,7 +24,7 @@
     </ul>
   </div>
   <div span='row'>
-    <div class='span6'>
+    <div class='col-md-6'>
       <h2>Reset your password</h2>
       <form name="pw_reset" action="/change_password" method="POST">
         <input type="password" class="input-medium" placeholder="Current password" id="password_current" name="password_current"><br>
