--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,6 @@
 
       {% block css %}{% end %}
     </style>
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -37,13 +36,13 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <a class="btn navbar-btn" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="/">Your App</a>
-          <div class="nav-collapse collapse">
+          <div class="navbar-collapse collapse">
             <ul class="nav">
               {% if current_user is not None %}
                 <li><a href="/account">Account</a></li>
@@ -57,8 +56,8 @@
                 <a href="/logout" class='navbar-text pull-right'>Log Out {{ current_user.email }}</a>
             {% else %}
                 <form class="navbar-form pull-right" action="/login" method="POST">
-                  <input class="span2" type="text" placeholder="Email" name='email'>
-                  <input class="span2" type="password" placeholder="Password" name='password'>
+                  <input class="col-md-2" type="text" placeholder="Email" name='email'>
+                  <input class="col-md-2" type="password" placeholder="Password" name='password'>
                   <button type="submit" class="btn">Sign in</button>
                 </form>
             {% end %}
