--- a/templates/main.html
+++ b/templates/main.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 <div class="row">
-  <div class="span6">
+  <div class="col-md-6">
     <h3>Left items</h3>
     <ul>
       <li>Item 1</li>
       <li>Item 2</li>
     </ul>
   </div>
-  <div class="span6">
+  <div class="col-md-6">
     <h3>Right items</h3>
     <ul>
       <li>Item 1</li>
@@ -19,7 +19,7 @@
 {% end %}
 
 {% block hero %}
-  <div class="hero-unit">
+  <div class="jumbotron">
     <p>
       {% if current_user is not None %}
         You're logged in as {{ current_user.email }}.
