--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
@@ -40,7 +39,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+
         <a class="navbar-brand" href="/">Your App</a>
+
+        {% if current_user is not None and False %}
         <div class="nav-collapse collapse navbar-responsive-collapse" style="max-height:50px;">
           <ul class="nav navbar-nav">
             <li class="dropdown">
@@ -52,26 +54,31 @@
                 <li><a href="http://facebook.com/">Facebook page</a></li>
               </ul>
             </li>
-
-            {% if current_user is not None %}
-              <ul class="nav navbar-nav pull-right">
-                <li class="dropdown">
-                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">Account <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><li><a href="/account">Settings</a></li></li>
-                    <li><a href="/logout" class="pull-right">Log Out {{ current_user.email }}</a></li>
-                  </ul>
-                </li>
-              </ul>
-            {% else %}
-              <li><a href="/register">Register</a></li>
-              <form class="navbar-form pull-right" action="/login" method="POST">
-                <input class="col-md-2" type="text" placeholder="Email" name='email'>
-                <input class="col-md-2" type="password" placeholder="Password" name='password'>
-                <button type="submit" class="btn">Sign in</button>
-              </form>
-            {% end %}
           </ul>
+
+          <ul class="nav navbar-nav pull-right">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Account <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><li><a href="/account">Settings</a></li></li>
+                <li><a href="/logout" class="pull-right">Log Out {{ current_user.email }}</a></li>
+              </ul>
+            </li>
+          </ul>
+        {% else %}
+        <div class="nav-collapse collapse navbar-responsive-collapse" style="max-height:50px;">
+          <ul class="nav navbar-nav">
+            <li><a href="/register">Register</a></li>
+          </ul>
+          <div class="nav pull-right">
+            <form class="navbar-form pull-right" action="/login" method="POST">
+              <input class="col-md-2" type="text" placeholder="Email" name='email'>
+              <input class="col-md-2" type="password" placeholder="Password" name='password'>
+              <button type="submit" class="btn">Sign in</button>
+            </form>
+          </div>
+        </div>
+        {% end %}
         </div>
       </div>
     </div>
