Using js libraries from Amazon weblibraries

--- a/templates/base.html
+++ b/templates/base.html
@@ -105,9 +105,15 @@
     </div>
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/static/js/jquery.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/jquery-2.0.3.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/code.min.js"></script>
+    <script src="/static/js/jquery.pnotify.min.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/jquery.tablesorter.min.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/ba-linkify.min.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/hmac-sha256.min.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/enc-base64.min.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/secret-rest-client.min.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/secret-data-table.min.js"></script>
     {% block js %}{%end%}
 
   </body>
