--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -23,6 +24,7 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="static/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/ico/apple-touch-icon-114-precomposed.png">
       <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/ico/apple-touch-icon-72-precomposed.png">
@@ -43,6 +45,11 @@
         <a class="navbar-brand" href="/">Your App</a>
 
         <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Link 1</a></li>
+            <li><a href="/">Link 2</a></li>
+            <li><a href="http://facebook.com/">Facebook page</a></li>
+          </ul>
           <ul class="nav navbar-nav">
           {% if not current_user or current_user == 'None' %}
             <li><a href="/register">Register</a></li>
@@ -66,7 +73,7 @@
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">Account <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><li><a href="/account">Settings</a></li></li>
-                <li><a href="/logout" class="pull-right">Log Out {{ current_user.email }}</a></li>
+                <li><a href="/logout" class="pull-right">Log out {{ current_user.email }}</a></li>
               </ul>
             </li>
           </ul>
@@ -106,8 +113,9 @@
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://weblibraries.s3.amazonaws.com/jquery-2.0.3.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/jquery.pnotify.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/jquery.pnotify.min.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/jquery.maskedinput.min.js"></script>
     <script src="http://weblibraries.s3.amazonaws.com/jquery.tablesorter.min.js"></script>
     <script src="http://weblibraries.s3.amazonaws.com/ba-linkify.min.js"></script>
     <script src="http://weblibraries.s3.amazonaws.com/hmac-sha256.min.js"></script>
