--- a/templates/base.html
+++ b/templates/base.html
@@ -85,10 +85,10 @@
             <div class="navbar-collapse collapse">
               <form class="navbar-form navbar-right" role="form" action="/login" method="POST">
                 <div class="form-group">
-                  <input type="text" placeholder="Email" class="form-control">
+                  <input type="text" name="email" placeholder="Email" class="form-control">
                 </div>
                 <div class="form-group">
-                  <input type="password" placeholder="Password" class="form-control">
+                  <input type="password" name="password" placeholder="Password" class="form-control">
                 </div>
                 <button type="submit" class="btn btn-success">Sign in</button>
               </form>
