--- a/templates/base.html
+++ b/templates/base.html
@@ -116,7 +116,8 @@
 
     <div class="container">
       {% if alert is not None %}
-        <div class='alert alert-notice alert-block'>
+        <div class="alert {{ alert_type }} alert-dismissable">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
           {{ alert }}
         </div>
       {% end %}
