--- a/templates/base.html
+++ b/templates/base.html
@@ -102,8 +102,10 @@
                 <li><a href="http://placasmarcadas.com" target="_blank">PlacasMarcadas</a></li>
                 <li><a href="http://megaloteria.net" target="_blank">MegaLoteria</a></li>
                 <li><a href="http://baladasusp.com" target="_blank">BaladasUSP</a></li>
+                <li class="divider"></li>
                 <li><a href="http://secret-todo-list.herokuapp.com" target="_blank">Secret TODO-List</a></li>
                 <li><a href="http://secret-passwords.herokuapp.com" target="_blank">Secret Passwords</a></li>
+                <li><a href="http://propagation.herokuapp.com" target="_blank">Secret Propagation</a></li>
                 <li><a href="http://secret-ips.herokuapp.com" target="_blank">Secret IPs</a></li>
                 <li class="divider"></li>
                 <li><a href="http://gatournament.com">Game Algorithms Tournament</a></li>
