--- a/templates/main.html
+++ b/templates/main.html
@@ -6,14 +6,14 @@
 </div>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6 col-lg=6">
     <h3>Left items</h3>
     <ul>
       <li>Item 1</li>
       <li>Item 2</li>
     </ul>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 col-lg=6">
     <h3>Right items</h3>
     <ul>
       <li>Item 1</li>
