--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <div class="page-header">
   <h1>Title</h1>
+</div>
+
+<div class="jumbotron">
+  <p>
+      <h1>Python Tornado Bootstrap</h1>
+      <ul>
+        <li>Login or Social login</li>
+        <li>Edit title, menu etc</li>
+      </ul>
+      <a href="/register" class="btn btn-primary btn-large">Sign up</a>
+  </p>
 </div>
 
 <div class="row">
