--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,6 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Link 1</a></li>
-            <li><a href="/">Link 2</a></li>
             <li><a href="http://facebook.com/">Facebook page</a></li>
           </ul>
           <ul class="nav navbar-nav">
@@ -87,7 +86,7 @@
           </ul>
 
           {% if not current_user or current_user == 'None' %}
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse pull-right">
               <form class="navbar-form navbar-right" role="form" action="/login" method="POST">
                 <div class="form-group">
                   <input type="text" name="email" placeholder="Email" class="form-control">
