--- a/templates/base.html
+++ b/templates/base.html
@@ -169,7 +169,7 @@
       <div class="container">
           <div class="row" style="height:50px;">
             <div class="col-lg-12 text-center">
-              @EightSecrets
+              <p style="color:white;">@EightSecrets</p>
 
               <a href="http://github.com/" class="img-rounded fa fa-github-square" target="_blank"></a>
 
