--- a/templates/base.html
+++ b/templates/base.html
@@ -182,7 +182,7 @@
           </div>
 
           <div class="row" style="height:50px;">
-            <div class="col-lg-3">
+            <div class="col-lg-4">
               <div class="panel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Donations</h3>
@@ -210,32 +210,24 @@
               </div>
             </div>
 
-            <div class="col-lg-3">
-              <div class="panel">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Social</h3>
-                </div>
-                <div class="panel-body">
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-3">
+            <div class="col-lg-4">
               <div class="panel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Contact</h3>
                 </div>
                 <div class="panel-body">
+                  <p>email@dns.com</p>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-3">
+            <div class="col-lg-4">
               <div class="panel">
                 <div class="panel-heading">
                     <h3 class="panel-title">About</h3>
                 </div>
                 <div class="panel-body">
+                  <p></p>
                 </div>
               </div>
             </div>
