--- a/templates/base.html
+++ b/templates/base.html
@@ -217,6 +217,10 @@
                 </div>
                 <div class="panel-body">
                   <p>email@dns.com</p>
+
+                  <p><div class="fb-like" data-href="http://CHANGE_HERE" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></p>
+
+                  <p><a href="https://twitter.com/CHANGE_HERE" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow</a></p>
                 </div>
               </div>
             </div>
@@ -251,5 +255,15 @@
     <script src="/static/js/custom.js"></script>
     {% block js %}{%end%}
 
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=CHANGE_HERE";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </body>
 </html>
