--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <![endif]-->
 
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/static/favicon.jpg">
   </head>
 
   <body>
